braid/braid.h

typedef int MPI_Comm;
typedef braid_Int
(*braid_PtFcnInitBasis)(braid_App      app,           
                        braid_Real     t,             
                        braid_Int      index,         
                        braid_Vector  *u_ptr          
                        );
typedef braid_Int
(*braid_PtFcnInnerProd)(braid_App        app,       
                        braid_Vector     u,         
                        braid_Vector     v,         
                        braid_Real      *prod_ptr   
                        );
typedef struct _braid_Core_struct *braid_Core;
braid_Int
braid_SetTimerFile(braid_Core     core,
                   braid_Int      length,       
                   const char    *filestem      
                  );
braid_Int
braid_ResetTimer(braid_Core  core           
);
braid_Int
braid_WriteConvHistory(braid_Core core,      
                       const char* filename  
                       );
braid_Int
braid_SetMaxLevels(braid_Core  core,        
                   braid_Int   max_levels   
                   );
braid_Int
braid_SetIncrMaxLevels(braid_Core  core);
braid_Int
braid_SetSkip(braid_Core  core,        
              braid_Int   skip         
              );
braid_Int
braid_SetMaxRefinements(braid_Core  core,             
                        braid_Int   max_refinements   
                       );
braid_Int
braid_SetTPointsCutoff(braid_Core  core,                
                       braid_Int   tpoints_cutoff       
                      );
braid_Int
braid_SetMinCoarse(braid_Core  core,        
                   braid_Int   min_coarse   
                   );
braid_Int
braid_SetRelaxOnlyCG(braid_Core  core,             
                     braid_Int   relax_only_cg     
                    );
braid_Int
braid_SetAbsTol(braid_Core  core,           
                braid_Real  atol            
                );
braid_Int
braid_SetRelTol(braid_Core  core,           
                braid_Real  rtol            
                );
braid_Int
braid_SetNRelax(braid_Core  core,                      
                braid_Int   level,          
                braid_Int   nrelax          
                );
braid_Int
braid_SetCRelaxWt(braid_Core  core,                   
                  braid_Int   level,       
                  braid_Real  Cwt          
                  );
braid_Int
braid_SetMaxIter(braid_Core  core,          
                 braid_Int   max_iter       
                 );
braid_Int
braid_SetFMG(braid_Core  core               
             );
braid_Int
braid_SetNFMG(braid_Core  core,              
              braid_Int   k                  
             );
braid_Int
braid_SetNFMGVcyc(braid_Core  core,         
                  braid_Int   nfmg_Vcyc     
                  );
braid_Int
braid_SetStorage(braid_Core  core,          
                 braid_Int   storage        
                );
braid_Int
braid_SetTemporalNorm(braid_Core  core,   
                      braid_Int   tnorm   
                      );
braid_Int
braid_SetPeriodic(braid_Core core,     
                  braid_Int  periodic  
                  );
braid_Int
braid_SetPrintLevel(braid_Core  core,          
                    braid_Int   print_level    
                    );
braid_Int
braid_SetFileIOLevel(braid_Core  core,          
                     braid_Int   io_level       
                     );
braid_Int
braid_SetPrintFile(braid_Core     core,             
                   const char    *printfile_name    
                   );
braid_Int
braid_SetDefaultPrintFile(braid_Core     core       
                          );
braid_Int
braid_SetAccessLevel(braid_Core  core,          
                     braid_Int   access_level   
                     );
braid_Int
braid_SetFinalFCRelax(braid_Core core);
braid_Int
braid_GetNumIter(braid_Core  core,          
                 braid_Int   *niter_ptr     
                 );
braid_Int
braid_GetRNorms(braid_Core  core,           
                braid_Int   *nrequest_ptr,  
                braid_Real  *rnorms         
                );
braid_Int
braid_GetNLevels(braid_Core  core,          
                 braid_Int  *nlevels_ptr    
                 );
braid_Int
braid_SetRichardsonEstimation(braid_Core core,                
                              braid_Int  est_error,           
                              braid_Int  richardson,          
                              braid_Int  local_order          
                              );
braid_Int
braid_SetDeltaCorrection(braid_Core           core,        
                         braid_Int            rank,        
                         braid_PtFcnInitBasis basis_init,  
                         braid_PtFcnInnerProd inner_prod   
                         );
braid_Int
braid_SetDeferDelta(braid_Core core,   
                    braid_Int  level,  
                    braid_Int  iter    
                    );
braid_Int
braid_SetLyapunovEstimation(braid_Core core,       
                            braid_Int  relax,      
                            braid_Int  cglv,       
                            braid_Int  exponents   
                            );
braid_Int
braid_SetTimings(braid_Core core,
                 braid_Int  timing_level);