braid/braid_test.h


braid_Int
braid_TestInitAccess( braid_App              app,     
                      MPI_Comm               comm_x,  
                      FILE                  *fp,      
                      braid_Real             t,       
                      braid_PtFcnInit        init,    
                      braid_PtFcnAccess      access,  
                      braid_PtFcnFree        free     
                      );
braid_Int
braid_TestClone( braid_App              app,         
                 MPI_Comm               comm_x,      
                 FILE                  *fp,          
                 braid_Real             t,           
                 braid_PtFcnInit        init,        
                 braid_PtFcnAccess      access,      
                 braid_PtFcnFree        free,        
                 braid_PtFcnClone       clone        
                 );
braid_Int
braid_TestSum( braid_App              app,         
               MPI_Comm               comm_x,      
               FILE                  *fp,          
               braid_Real             t,           
               braid_PtFcnInit        init,        
               braid_PtFcnAccess      access,      
               braid_PtFcnFree        free,        
               braid_PtFcnClone       clone,       
               braid_PtFcnSum         sum          
               );
braid_Int
braid_TestSpatialNorm( braid_App              app,         
                       MPI_Comm               comm_x,      
                       FILE                  *fp,          
                       braid_Real             t,           
                       braid_PtFcnInit        init,        
                       braid_PtFcnFree        free,        
                       braid_PtFcnClone       clone,       
                       braid_PtFcnSum         sum,         
                       braid_PtFcnSpatialNorm spatialnorm  
                       );
braid_Int
braid_TestBuf( braid_App              app,         
               MPI_Comm               comm_x,      
               FILE                  *fp,          
               braid_Real             t,           
               braid_PtFcnInit        init,        
               braid_PtFcnFree        free,        
               braid_PtFcnSum         sum,         
               braid_PtFcnSpatialNorm spatialnorm, 
               braid_PtFcnBufSize     bufsize,     
               braid_PtFcnBufPack     bufpack,     
               braid_PtFcnBufUnpack   bufunpack    
               );