braid/braid.jl


function SetTimerFile(core::braid_core, filestem::String)
    len = @ccall strlen(filestem::Cstring)::Cint
    @ccall XBraid.braid_SetTimerFile(core._braid_core::Ptr{_jl_braid_core}, len::Cint, filestem::Cstring)::Cint
end

PrintTimers(core::braid_core) = @ccall XBraid.braid_SetTimerFile(core._braid_core::Ptr{_jl_braid_core})::Cint
ResetTimer(core::braid_core) = @ccall XBraid.braid_ResetTimer(core._braid_core::Ptr{_jl_braid_core})::Cint
braid_SetTimings(core::braid_core, timing_level::Integer) = @ccall XBraid.braid_SetTimings(core._braid_core::Ptr{_jl_braid_core}, timing_level::Cint)::Cint

function WriteConvHistory(core::braid_core, filename::String)
    @ccall XBraid.braid_WriteConvHistory(core._braid_core::Ptr{_jl_braid_core}, filename::Cstring)::Cint
end

function SetMaxLevels(core::braid_core, max_levels::Integer)
    @ccall XBraid.braid_SetMaxLevels(core._braid_core::Ptr{_jl_braid_core}, max_levels::Cint)::Cint
end

SetIncrMaxLevels(core::braid_core) = @ccall XBraid.braid_SetIncrMaxLevels(core._braid_core::Ptr{_jl_braid_core})::Cint

SetSkip(core::braid_core, skip::Bool) = @ccall XBraid.braid_SetSkip(core._braid_core::Ptr{_jl_braid_core}, skip::Cint)::Cint
SetRefine(core::braid_core, refine::Bool) = @ccall XBraid.braid_SetSkip(core._braid_core::Ptr{_jl_braid_core}, refine::Cint)::Cint
SetMaxRefinements(core::braid_core, max_refinements::Integer) = @ccall XBraid.braid_SetMaxRefinements(core._braid_core::Ptr{_jl_braid_core}, max_refinements::Cint)::Cint
SetTPointsCutoff(core::braid_core, tpoints_cutoff::Integer) = @ccall XBraid.braid_SetTPointsCutoff(core._braid_core::Ptr{_jl_braid_core}, tpoints_cutoff::Cint)::Cint
SetMinCoarse(core::braid_core, min_coarse::Integer) = @ccall XBraid.braid_SetMinCoarse(core._braid_core::Ptr{_jl_braid_core}, min_coarse::Cint)::Cint
SetRelaxOnlyCG(core::braid_core, relax_only_cg::Bool) = @ccall XBraid.braid_SetRelaxOnlyCG(core._braid_core::Ptr{_jl_braid_core}, relax_only_cg::Cint)::Cint
SetAbsTol(core::braid_core, atol::Real) = @ccall XBraid.braid_SetAbsTol(core._braid_core::Ptr{_jl_braid_core}, atol::Cdouble)::Cint
SetRelTol(core::braid_core, rtol::Real) = @ccall XBraid.braid_SetRelTol(core._braid_core::Ptr{_jl_braid_core}, rtol::Cdouble)::Cint
SetNRelax(core::braid_core, level::Integer, nrelax::Integer) = @ccall XBraid.braid_SetNRelax(core._braid_core::Ptr{_jl_braid_core}, level::Cint, nrelax::Cint)::Cint
SetCRelaxWt(core::braid_core, level::Integer, Cwt::Real) = @ccall XBraid.braid_SetCRelaxWt(core._braid_core::Ptr{_jl_braid_core}, level::Cint, Cwt::Cdouble)::Cint
SetCFactor(core::braid_core, level::Integer, cfactor::Integer) = @ccall XBraid.braid_SetNRelax(core._braid_core::Ptr{_jl_braid_core}, level::Cint, cfactor::Cint)::Cint
SetMaxIter(core::braid_core, max_iter::Integer) = @ccall XBraid.braid_SetMaxIter(core._braid_core::Ptr{_jl_braid_core}, max_iter::Cint)::Cint
SetFMG(core::braid_core) = @ccall XBraid.braid_SetFMG(core._braid_core::Ptr{_jl_braid_core})::Cint
SetNFMG(core::braid_core, k::Integer) = @ccall XBraid.braid_SetNFMG(core._braid_core::Ptr{_jl_braid_core}, k::Cint)::Cint
SetNFMGVcyc(core::braid_core, nfmg_Vcyc::Integer) = @ccall XBraid.braid_SetNFMGVcyc(core._braid_core::Ptr{_jl_braid_core}, nfmg_Vcyc::Cint)::Cint
SetStorage(core::braid_core, storage::Bool) = @ccall XBraid.braid_SetStorage(core._braid_core::Ptr{_jl_braid_core}, storage::Cint)::Cint
SetTemporalNorm(core::braid_core, tnorm::Bool) = @ccall XBraid.braid_SetTemporalNorm(core._braid_core::Ptr{_jl_braid_core}, tnorm::Cint)::Cint
SetPeriodic(core::braid_core, periodic::Bool) = @ccall XBraid.braid_SetPeriodic(core._braid_core::Ptr{_jl_braid_core}, periodic::Cint)::Cint
SetPrintLevel(core::braid_core, print_level::Integer) = @ccall XBraid.braid_SetPrintLevel(core._braid_core::Ptr{_jl_braid_core}, print_level::Cint)::Cint
SetFileIOLevel(core::braid_core, io_level::Integer) = @ccall XBraid.braid_SetFileIOLevel(core._braid_core::Ptr{_jl_braid_core}, io_level::Cint)::Cint
SetPrintFile(core::braid_core, filename::String) = @ccall XBraid.braid_SetPrintFile(core._braid_core::Ptr{_jl_braid_core}, filename::Cstring)::Cint
SetDefaultPrintFile(core::braid_core) = @ccall XBraid.braid_SetDefaultPrintFile(core._braid_core::Ptr{_jl_braid_core})::Cint
SetAccessLevel(core::braid_core, access_level::Integer) = @ccall XBraid.braid_SetAccessLevel(core._braid_core::Ptr{_jl_braid_core}, access_level::Cint)::Cint
SetFinalFCRelax(core::braid_core) = @ccall XBraid.braid_SetFinalFCRelax(core._braid_core::Ptr{_jl_braid_core})::Cint
function GetNumIter(core::braid_core)
    niter = Ref(0)
    @ccall XBraid.braid_GetNumIter(core._braid_core::Ptr{_jl_braid_core}, niter::Ref{Cint})::Cint
    return niter[] # dereference
end

function GetRNorms(core::braid_core)
    nrequest = Ref(GetNumIter(core))
    rnorms = zeros(nrequest)
    @ccall XBraid.braid_GetRNorms(core._braid_core::Ptr{_jl_braid_core}, nrequest::Ref{Cint}, rnorms::Ref{Cdouble})::Cint
    return rnorms
end

function GetNLevels(core::braid_core)
    nlevels = Ref(0)
    @ccall XBraid.braid_GetNLevels(core._braid_core::Ptr{_jl_braid_core}, nlevels::Ref{Cint})::Cint
    return nlevels[]
end

SetSeqSoln(core::braid_core, seq_soln::Bool) = @ccall XBraid.braid_GetNLevels(core._braid_core::Ptr{_jl_braid_core}, seq_soln::Cint)::Cint

function SetRichardsonEstimation(core::braid_core, est_error::Bool, richardson::Bool, local_order::Integer)
    @ccall XBraid.braid_SetRichardsonEstimation(core._braid_core::Ptr{_jl_braid_core}, est_error::Cint, richardson::Cint, local_order::Cint)::Cint
end

function SetDeltaCorrection(core::braid_core, rank::Integer, basis_init::Function, inner_prod::Function)
    core._braid_app.basis_init = basis_init
    core._braid_app.inner_prod = inner_prod
    @ccall XBraid.braid_SetDeltaCorrection(core._braid_core::Ptr{_jl_braid_core}, rank::Cint, _c_basis_init::Ptr{Cvoid}, _c_inner_prod::Ptr{Cvoid})::Cint
end

function SetDeferDelta(core::braid_core, level::Integer, iter::Integer)
    @ccall XBraid.braid_SetDeferDelta(core._braid_core::Ptr{_jl_braid_core}, level::Cint, iter::Cint)::Cint
end

function SetLyapunovEstimation(core::braid_core, relax::Bool, cglv::Bool, exponents::Bool)
    @ccall XBraid.braid_SetLyapunovEstimation(core._braid_core::Ptr{_jl_braid_core}, relax::Cint, cglv::Cint, exponents::Bool)::Cint
end

# Still missing spatial coarsening, sync, residual, and adjoint

# braid_test
function TestInitAccess(app::_jl_braid_app, t::Real)
    @ccall XBraid.braid_TestInitAccess(
        app::Ref{_jl_braid_app},
        app.comm::MPI.MPI_Comm,
        C_stdout::Base.Libc.FILE,
        t::Cdouble,
        _c_init::Ptr{Cvoid},
        _c_access::Ptr{Cvoid},
        _c_free::Ptr{Cvoid}
    )::Cint

    println("Serialized size of user vector: $(app.bufsize)")
    println("Check output for objects not properly freed:")
    println(app.ref_ids)
end

function TestClone(app::_jl_braid_app, t::Real)
    @ccall XBraid.braid_TestClone(
        app::Ref{_jl_braid_app},
        app.comm::MPI.MPI_Comm,
        C_stdout::Base.Libc.FILE,
        t::Cdouble,
        _c_init::Ptr{Cvoid},
        _c_access::Ptr{Cvoid},
        _c_free::Ptr{Cvoid},
        _c_clone::Ptr{Cvoid}
    )::Cint
end

function TestSum(app::_jl_braid_app, t::Real)
    @ccall XBraid.braid_TestSum(
        app::Ref{_jl_braid_app},
        app.comm::MPI.MPI_Comm,
        C_stdout::Base.Libc.FILE,
        t::Cdouble,
        _c_init::Ptr{Cvoid},
        _c_access::Ptr{Cvoid},
        _c_free::Ptr{Cvoid},
        _c_clone::Ptr{Cvoid},
        _c_sum::Ptr{Cvoid}
    )::Cint
end

function TestSpatialNorm(app::_jl_braid_app, t::Real)
    @ccall XBraid.braid_TestSpatialNorm(
        app::Ref{_jl_braid_app},
        app.comm::MPI.MPI_Comm,
        C_stdout::Base.Libc.FILE,
        t::Cdouble,
        _c_init::Ptr{Cvoid},
        _c_free::Ptr{Cvoid},
        _c_clone::Ptr{Cvoid},
        _c_sum::Ptr{Cvoid},
        _c_norm::Ptr{Cvoid}
    )::Cint
end

function TestBuf(app::_jl_braid_app, t::Real)
    @ccall XBraid.braid_TestBuf(
        app::Ref{_jl_braid_app},
        app.comm::MPI.MPI_Comm,
        C_stdout::Base.Libc.FILE,
        t::Cdouble,
        _c_init::Ptr{Cvoid},
        _c_free::Ptr{Cvoid},
        _c_sum::Ptr{Cvoid},
        _c_norm::Ptr{Cvoid},
        _c_bufsize::Ptr{Cvoid},
        _c_bufpack::Ptr{Cvoid},
        _c_bufunpack::Ptr{Cvoid}
    )::Cint
    print('\n')
    println("Check output for objects not freed:")
    println(app.ref_ids)
end

# main ex-01
MPI.Init()
comm = MPI.COMM_WORLD

function my_step(u, ustop, fstop, tstart, tstop)
    # backward Euler
    u[] = 1. / (1. + tstop-tstart) * u[]
end

function my_init_basis(t, i)
    return Ref(1.)
end

function my_init(t)
    if t == 0.
        u = Ref(1.)
    else
        u = Ref(0.456)
    end
end

function my_sum(a, x, b, y)
    y[] = a*x[] + b*y[]
end

function my_access(u)
    println(u[])
end

my_norm(u) = abs(u[])
my_innerprod(u, v) = u[] * v[]

app = _jl_braid_app(comm, my_step, my_init, my_sum, my_norm, my_access)

TestInitAccess(app, 0.)
TestClone(app, 0.)
TestSum(app, 0.)
TestSpatialNorm(app, 0.)
TestBuf(app, 0.)


ntime = 10
tstart = 0.0
tstop = tstart + ntime / 2.0;
core = Init(comm, comm, tstart, tstop, ntime, my_step, my_init, my_sum, my_norm, my_access)

SetPrintLevel(core, 2)
SetMaxLevels(core, 2)
SetAbsTol(core, 1.e-6)
SetCFactor(core, -1, 2)

Drive(core)

Destroy!(core)

println("I'm amazed you got here!!!")
